<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cpm</groupId>
    <artifactId>cpm-cucumber-java</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>framework-core</module>
        <!--<module>mConsole</module>-->
        <!--<module>mRetail</module>-->
        <module>mRetail-module</module>
    </modules>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <ch.qos.logback.classic.version>1.1.3</ch.qos.logback.classic.version><!-- last updated 13-Sep-2015 -->
        <org.seleniumhq.selenium.version>2.53.0</org.seleniumhq.selenium.version><!-- last updated 02-Jun-2016 -->
        <joda.time.version>2.9.1</joda.time.version> <!-- last updated 17-Dec-2015 -->
        <org.joda.convert.version>1.8.1</org.joda.convert.version> <!-- last updated 25-Dec-2015 -->
        <commons-lang3.version>3.4</commons-lang3.version><!-- last updated 18-Dec-2015 -->
        <org.testng.version>6.9.10</org.testng.version><!-- last updated 17-Dec-2015 -->
        <com.google.guava.version>19.0</com.google.guava.version><!-- last updated 18-Dec-2015 -->
        <com.google.code.gson.version>2.5</com.google.code.gson.version><!-- last updated 18-Dec-2015 -->
        <org.hamcrest.version>1.3</org.hamcrest.version>
        <com.googlecode.lambdaj.version>2.3.3</com.googlecode.lambdaj.version><!-- last updated 29-Dec-2015 -->
        <commons-httpclient.version>3.1</commons-httpclient.version>
        <dom4j.version>1.6.1</dom4j.version>
        <org.reflections.version>0.9.10</org.reflections.version>
        <org.apache.poi.version>3.14</org.apache.poi.version>
        <jaxen.version>1.1.1</jaxen.version>
        <org.apache.pdfbox.version>2.0.1</org.apache.pdfbox.version>
        <firefox.xpi.version>1.2.3</firefox.xpi.version>


        <allure.version>1.4.11</allure.version>
        <aspectj.version>1.8.3</aspectj.version>

        <browser>firefox1</browser>
        <overwrite.binaries>false</overwrite.binaries>
        <remote>false</remote>
        <seleniumGridURL/>
        <platform/>
        <browserVersion/>


    </properties>


    <dependencies>

        <!--<dependency>-->
        <!--<groupId>ch.qos.logback</groupId>-->
        <!--<artifactId>logback-classic</artifactId>-->
        <!--<version>${ch.qos.logback.classic.version}</version>-->
        <!--</dependency>-->


        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.7</version>
        </dependency>

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${joda.time.version}</version>
        </dependency>

        <dependency>
            <groupId>org.joda</groupId>
            <artifactId>joda-convert</artifactId>
            <version>${org.joda.convert.version}</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>${com.googlecode.lambdaj.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-all</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${com.google.guava.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-all</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${com.google.code.gson.version}</version>
        </dependency>

        <!--<dependency>-->
            <!--<groupId>org.testng</groupId>-->
            <!--<artifactId>testng</artifactId>-->
            <!--<version>${org.testng.version}</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${org.hamcrest.version}</version>
        </dependency>

        <!--<dependency>-->
        <!--<groupId>org.seleniumhq.selenium</groupId>-->
        <!--<artifactId>selenium-firefox-driver</artifactId>-->
        <!--<version>${org.seleniumhq.selenium.version}</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
        <!--<groupId>org.seleniumhq.selenium</groupId>-->
        <!--<artifactId>selenium-chrome-driver</artifactId>-->
        <!--<version>${org.seleniumhq.selenium.version}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${org.seleniumhq.selenium.version}</version>
        </dependency>


        <dependency>
            <groupId>dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>${dom4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${org.apache.poi.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>dom4J</artifactId>
                    <groupId>dom4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>${org.apache.poi.version}</version>
        </dependency>

        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>1.4.01</version>
        </dependency>

        <dependency>
        <groupId>jaxen</groupId>
        <artifactId>jaxen</artifactId>
        <version>${jaxen.version}</version>
        </dependency>

        <dependency>
            <groupId>net.lightbody.bmp</groupId>
            <artifactId>browsermob-core-littleproxy</artifactId>
            <version>2.1.0-beta-6</version>
            <scope>test</scope>
        </dependency>

        <!--cucumber dependencies-->

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>1.2.0</version>
            <scope>test</scope>
        </dependency>

        <!--<dependency>-->
        <!--<groupId>info.cukes</groupId>-->
        <!--<artifactId>cucumber-jvm</artifactId>-->
        <!--<version>1.2.8</version>-->
        <!--<type>pom</type>-->
        <!--</dependency>-->

        <!--<dependency>-->
        <!--<groupId>info.cukes</groupId>-->
        <!--<artifactId>cucumber-junit</artifactId>-->
        <!--<version>1.1.5</version>-->
        <!--<scope>test</scope>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>info.cukes</groupId>-->
            <!--<artifactId>cucumber-testng</artifactId>-->
            <!--<version>1.2.0</version>-->
        <!--</dependency>-->


        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.2.0</version>
        </dependency>


        <dependency>
            <groupId>ru.yandex.qatools.allure</groupId>
            <artifactId>allure-cucumber-jvm-adaptor</artifactId>
            <version>1.5.1</version>
        </dependency>

        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>2.8.0</version>
        </dependency>

        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>2.8.0</version>
        </dependency>

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.2.0</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>xml-path</artifactId>
            <version>3.0.0</version>
        </dependency>

        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>3.3.0</version>
        </dependency>

        <dependency>
            <groupId>ru.yandex.qatools.ashot</groupId>
            <artifactId>ashot</artifactId>
            <version>1.5.2</version>
        </dependency>

    </dependencies>


    <build>
        <!--<defaultGoal>install</defaultGoal>-->

        <pluginManagement>
            <plugins>
                <!-- http://maven.apache.org/maven-release/maven-release-plugin/index.html -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.3</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.18.1</version>
                    <configuration>
                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                        <testFailureIgnore>false</testFailureIgnore>
                        <argLine>
                            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                        </argLine>
                        <properties>
                            <property>
                                <name>listener</name>
                                <value>utils.listeners.CustomAllureListener</value>
                            </property>
                        </properties>


                        <!--Defining System Properties Variable-->
                        <systemPropertyVariables>
                            <browser>${browser}</browser>
                            <screenShotDirectory>${project.build.directory}/screenshots</screenShotDirectory>
                            <remoteDriver>${remote}</remoteDriver>
                            <gridURL>${seleniumGridURL}</gridURL>
                            <desiredPlatform>${platform}</desiredPlatform>
                            <desiredBrowserVersion>${browserVersion}</desiredBrowserVersion>
                        </systemPropertyVariables>

                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.aspectj</groupId>
                            <artifactId>aspectjweaver</artifactId>
                            <version>${aspectj.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>

                <!--Needed only to show reports locally. Run jetty:run and
                open localhost:8080 to show the report-->
                <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>9.2.10.v20150310</version>
                    <configuration>
                        <webAppSourceDirectory>${project.build.directory}/site/allure-maven-plugin</webAppSourceDirectory>
                        <stopKey>stop</stopKey>
                        <stopPort>1234</stopPort>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>


    <!--Profiles-->
    <!--<profiles>-->
        <!--<profile>-->
            <!--<id>AllApiTests</id>-->
            <!--<activation>-->
                <!--<activeByDefault>true</activeByDefault>-->
            <!--</activation>-->
            <!--<build>-->
                <!--<pluginManagement>-->
                    <!--<plugins>-->
                        <!--<plugin>-->
                            <!--<groupId>org.apache.maven.plugins</groupId>-->
                            <!--<artifactId>maven-surefire-plugin</artifactId>-->
                            <!--<version>2.19.1</version>-->
                            <!--<configuration>-->
                                <!--<includes>-->
                                    <!--<include>**/AllApiTest.class</include>-->
                                <!--</includes>-->
                            <!--</configuration>-->
                        <!--</plugin>-->
                    <!--</plugins>-->
                <!--</pluginManagement>-->
            <!--</build>-->
        <!--</profile>-->
    <!--</profiles>-->


    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>ru.yandex.qatools.allure</groupId>
                <artifactId>allure-maven-plugin</artifactId>
                <version>2.0</version>
            </plugin>
        </plugins>
    </reporting>

</project>